crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__comment_markers_inside_text_blocks_are_literal_content.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""
/* text */
// text
"""

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      TextBlockLiteral "\"\"\"\n/* text */\n// text\n\"\"\"" @ 0..26
  Eof "" @ 26..26

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..26 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(26) }) message=unexpected token at top level
