crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__diagnoses_hex_floats_without_binary_exponent.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
0x1. 0x.1 0x1p 0x1p+ 0x1p_1 0xp1 0x.p1 0X.p1

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      FloatingPointLiteral "0x1." @ 0..4 trailing=[Whitespace " "]
      FloatingPointLiteral "0x.1" @ 5..9 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1p" @ 10..14 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1p+" @ 15..20 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1p_1" @ 21..27 trailing=[Whitespace " "]
      FloatingPointLiteral "0xp1" @ 28..32 trailing=[Whitespace " "]
      FloatingPointLiteral "0x.p1" @ 33..38 trailing=[Whitespace " "]
      FloatingPointLiteral "0X.p1" @ 39..44
  Eof "" @ 44..44

diagnostics:
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=0..4 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=5..9 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=10..14 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=15..20 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=21..27 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=28..32 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=33..38 message="invalid numeric literal"
  code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=39..44 message="invalid numeric literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..4 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(4) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(5), end: TextSize(9) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(10), end: TextSize(14) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(15), end: TextSize(20) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(21), end: TextSize(27) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(28), end: TextSize(32) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(33), end: TextSize(38) }) message=invalid numeric literal
code=java.lex.invalid_numeric_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(39), end: TextSize(44) }) message=invalid numeric literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(4) }) message=unexpected token at top level
